syntax = "proto3";

package swiftschool.auth.v1;

option go_package = "swiftschool/app/auth/v1;authv1";

import "google/api/annotations.proto";

// AuthService handles authentication (login + OTP verification).
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = { post: "/api/auth/login" body: "*" };
  }
  rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse) {
    option (google.api.http) = { post: "/api/auth/verification" body: "*" };
  }
}

message LoginRequest {
  string identifier = 1;
  string user_type = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}

message VerifyOTPRequest {
  string identifier = 1;
  string user_type = 2;
  string otp = 3;
}

message VerifyOTPResponse {
  bool success = 1;
  string message = 2;
  UserResponse user = 3;
  string token = 4;
}

// UserResponse is shared across auth and users protos via same package.
message UserResponse {
  string id = 1;
  string username = 2;
  string role_type = 3;
  string linked_entity_id = 4;
  string institute_id = 5;
  bool is_active = 6;
  string created_at = 7;
  string updated_at = 8;
}
