syntax = "proto3";

package swiftschool.auth.v1;

option go_package = "swiftschool/app/auth/v1;authv1";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "proto/common/v1/common.proto";
import "proto/auth/v1/auth.proto";

// UserService manages user CRUD operations.
service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = { post: "/api/auth/users/register" body: "*" };
  }
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse) {
    option (google.api.http) = { get: "/api/auth/users/get_by_username" };
  }
  rpc GetUserById(swiftschool.common.v1.IdRequest) returns (GetUserByIdResponse) {
    option (google.api.http) = { get: "/api/auth/users/get_by_id" };
  }
  rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (swiftschool.common.v1.Empty) {
    option (google.api.http) = { put: "/api/auth/users/update_password" body: "*" };
  }
  rpc UpdateUserStatus(UpdateUserStatusRequest) returns (swiftschool.common.v1.Empty) {
    option (google.api.http) = { put: "/api/auth/users/update_status" body: "*" };
  }
  rpc ListUsersByRole(ListUsersByRoleRequest) returns (ListUsersByRoleResponse) {
    option (google.api.http) = { get: "/api/auth/users/list_by_role" };
  }
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string role_type = 3;
  string linked_entity_id = 4;
  google.protobuf.StringValue institute_id = 5;
  bool is_active = 6;
}

message CreateUserResponse {
  UserResponse user = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  UserResponse user = 1;
}

message GetUserByIdResponse {
  UserResponse user = 1;
}

message UpdateUserPasswordRequest {
  string id = 1;
  string password = 2;
}

message UpdateUserStatusRequest {
  string id = 1;
  bool is_active = 2;
}

message ListUsersByRoleRequest {
  string role_type = 1;
  google.protobuf.StringValue institute_id = 2;
}

message ListUsersByRoleResponse {
  repeated UserResponse users = 1;
}
