syntax = "proto3";

package swiftschool.common.v1;

option go_package = "swiftschool/app/common/v1;commonv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// ========================= BASE MODELS =========================

// BaseModel contains standard audit fields shared by all entities.
message BaseModel {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  google.protobuf.StringValue created_by = 5;
  google.protobuf.StringValue updated_by = 6;
}

// TenantModel extends BaseModel with institute-scoped multi-tenancy.
message TenantModel {
  BaseModel base = 1;
  string institute_id = 2;
}

// ========================= COMMON REQUEST / RESPONSE =========================

message Empty {}

message IdRequest {
  string id = 1;
}

message TenantIdRequest {
  string institute_id = 1;
  string id = 2;
}

message TenantListRequest {
  string institute_id = 1;
}

message DeleteRequest {
  string id = 1;
}

message TenantDeleteRequest {
  string institute_id = 1;
  string id = 2;
}

// ========================= NESTED TYPES =========================

message LanguageSkill {
  string language = 1;
  string proficiency = 2;
  bool can_read = 3;
  bool can_write = 4;
  bool can_speak = 5;
}

message SocialMediaHandles {
  map<string, string> handles = 1;
}
